# libmatrix

./: .gitignore  README.md  api.c  matrix-priv.h  matrix.c  matrix.h  meson.build  sync.c
.github/workflows/: build.yml
include/: matrix.h
src/: api.c  matrix.c  sync.c
subprojects/: cjson.wrap
tests/: test_parsing.cc
